2008-07-03  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.dg/compat/struct-by-value-17a_x.c: Remove duplicated code.
	* gcc.dg/compat/struct-by-value-17a_y.c: Likewise.

2008-07-03  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/loop_optimization3.adb: New test.
	* gnat.dg/loop_optimization3_pkg.ad[sb]: New helper.

2008-07-03  Uros Bizjak  <ubizjak@gmail.com>

	PR target/36710
	* gcc.target/i386/float128-2.c: New test.

2008-07-03  Michael Meissner  <gnu@the-meissners.org>

	PR middle-end/35736
	* gcc.dg/pr35736.c: New file.

2008-07-03  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* gcc.dg/pr28243.c: Skip on SPU.
	* gcc.dg/torture/pr25947-1.c: Likewise.
	* gcc.dg/20030702-1.c: Likewise.
	* g++.old-deja/g++.other/comdat5.C: Likewise.
	* g++.old-deja/g++.other/local-alloc1.C: Likewise.
	* g++.dg/opt/vt1.C: Likewise.

2008-07-03  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.dg/compat/struct-by-value-17a_main.c: Remove duplicated code.

2008-07-03  H.J. Lu  <hongjiu.lu@intel.com>
	    Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/float128-1.c: New.

2008-07-03  Andrew Haley  <aph@redhat.com>

	PR preprocessor/33305
	* gcc.dg/cpp/avoidpaste1.c: Use dg-options "-ansi" to avoid
	"-pedantic".
	* gcc.dg/cpp/avoidpaste2.c: Likewise
	* gcc.dg/cpp/20000519-1.c: Likewise.
	* g++.dg/ext/gnu-inline-global-reject.C: Likewise.
	* gcc.dg/cpp/c99-empty-macro-args.c: New test.
	* gcc.dg/cpp/c90-empty-macro-args.c: New test.

2008-07-03  Richard Guenther  <rguenther@suse.de>

	PR c++/36128
	* g++.dg/other/builtin1.C: New testcase.

2008-07-02  Joseph Myers  <joseph@codesourcery.com>

	* g++.dg/compat/struct-layout-1.exp: Compile generator on build system.
	* gcc.dg/compat/struct-layout-1.exp: Likewise.
	* objc.dg/gnu-encoding/gnu-encoding.exp: Likewise.

2008-07-02  Andy Hutchinson  <hutchinsonandy@aim.com>

	PR testsuite/36285
	* gcc.dg/compat/struct-by-value-16_x.c: Move some tests to new file 
	to reduce code size.
	* gcc.dg/compat/struct-by-value-16_y.c: Ditto.