@@ -1,3 +1,8 @@
+2008-07-04  Richard Sandiford  <richard@codesourcery.com>
+
+	* gcc.target/m68k/interrupt-2.c: New file.
+	* gcc.dg/tree-ssa/20040204-1.c: Don't XFAIL for m68k*-*-*.
+
 2008-07-03  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gcc.dg/compat/struct-by-value-17a_x.c: Remove duplicated code.
